--- a/Main web.html
+++ b/Main web.html
@@ -10,23 +10,125 @@
     <nav class="navbar">
         <div class="logo">MySite</div>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Regulations</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="welcome.html">Home</a></li>
+            <li><a href="Main web.html">Regulations</a></li>
+            <li><a href="introduction.html">About</a></li>
         </ul>
     </nav>
     <div class="head">
-    <h1>Students regulations</h1>
-    <h2>Pasal 3 - HAK DAN KEWAJIBAN SISWA</h2>
+    <h1>Students Regulations</h1>
     <h2>Pasal 3 - HAK DAN KEWAJIBAN SISWA</h2>
     </div>
     <h2>HAK SISWA - STUDENT RIGHTS</h2>
     <div class="list1">
     <ol>
-        <li>Mengikuti kegiatan akademismaupunnon-akademis yang diselenggarakan di
-            dalam maupun di luar sekolah, termasuk secara daring dan luring - Participate in academic and non-academic activities conducted both inside
+        <li>Participate in academic and non-academic activities conducted both inside
             and outside the school, including online and onsite formats.
         </li>
+        <li> 
+            Receive religious education in accordance with Christian values.</li>
+        <li>
+            Utilize allschool facilities appropriately,according to theirintended functions
+            and regulations.</li>
+        <li>
+            Receive equaltreatmentfromthe school principal,teachers, and staff.</li>
+        <li>
+            Access guidance and counseling servicesfromcounselors or teachers based
+            on needs and procedures.</li>
+        <li>
+            Receive health services provided by the school clinic in accordance with needs
+            and regulations.</li>
+        <li>Respond to and defend against any allegations made toward them.</li>
+        <li>Develop themselves by participating in Co-Curricular Activities(CCA) provided
+            by the school.</li>
+        <li>Develop themselves by participating in Co-Curricular Activities(CCA) provided
+            by the school.</li>
+        <li>Receive feedback or results on assignments or assessments within two weeks
+            at the latest.</li>
+        <li>Submit constructive suggestions or feedback to the school leadership,
+            teachers, or staff in accordance with proper procedures and ethics.</li>
+        <li>Participate in competitions or events on behalf of the school with the
+            principal's approval.</li>
+        <li>Receive information and take partin selection processesfor self-development
+            opportunities (scholarships, competitions, student exchange programs).</li>
+        <li>Receive report slips or diplomas regularly, provided all administrative
+            payments and returns of borrowed school property have been fulfilled.</li>
+        <li>Receive report card or diplomas upon withdrawal or graduation, provided
+            that all administrative obligations and the return of borrowed property have
+            been completed.</li>
+    <ol>
+    <h2>KEWAJIBAN SISWA - STUDENT OBLIGATIONS</h2>
+
+    <ol>
+        <li>Understand and uphold the school's core values: Love, Joy, Peace, Patience,
+            Kindness, Goodness, Faithfulness, Gentleness, and Self-Control.</li>
+        <li>Comply with allschool rules, both written and verbal.</li>
+        <li>Show respect to all members of the school community through polite
+            behavior and speech.</li>
+        <li>Maintain the good reputation of the school both on and off campus,
+            including on social media.</li>
+        <li>Be present atschool on time during in-person learning.</li>
+        <li>Participate in all classes and school programs.</li>
+        <li>Informand request permission when absent;five consecutive unexcused
+            absences are considered a withdrawal.</li>
+        <li>Ask for clarification or updates on lessons or school activities that were
+            missed or not understood.</li>
+        <li>Come prepared with books and learning tools asrequired.</li>
+        <li>Actively participate in school events and activities.</li>
+        <li>Maintain cleanliness, a comfortable environment, and classroom order.</li>
+        <li>Be responsible forschool property and replace any damage caused by
+            negligence or intent.</li>
+        <li>Take care of personal belongings</li>
+        <li>Dress neatly and modestly according to the following standards:</li>
+        <p>14.1. Hari Senin hinggga kamis: Seragam putih biru
+
+        </p>
+            Monday until Thursday :National Uniform(white-Blue)
+            <p></p>
+            Standar Seragam Siswa Laki-laki / Male Students:
+            <ul>
+            <li>
+                Shirtbuttoned and tucked into trousers</li>
+            <li>School tie</li>
+            <li>School cap during flag ceremony</li>
+            <li>Belt</li>
+            <li>School attributes(logo and name tag)</li>
+            </ul>
+
+        <p>Standar Seragam Siswi/ Female Students:</p>
+        <ul>
+            <li>Blouse/shirt buttoned and tucked into skirt</li>
+            <li>Skirt below the knee</li>
+            <li>School cap during flag ceremony</li>
+            <li>School tie</li>
+            <li>School attributes(logo and name tag)</li>
+        </ul>
+        <p>14.2.Friday - Batik attire for both male and female students</p>
+        <p>Requirements:</p>
+        <ul>
+            <li>Collared shirt</li>
+            <li>Fabric pants or jeans, notleggings, gympants, or ripped jeans</li>
+        </ul>
+        <p>14.3.PE Day - School sports uniform</p>
+        <ul>
+            <li>Must change into regular uniformafter PE class.</li>
+            <li>If PE is in the last period,students must wear their regular uniform
+                first and change into PE clothes only when PE starts.</li>
+            <li>May wear PE uniform from home if PE is the first period</li>
+        </ul>
+        <p>14.4.Other activities - Smart casual attire</p>
+        <ul>
+            <li>Top must have sleeves and not be see-through</li>
+            <li>Fabric pants or jeans(notleggings, gympants, or ripped jeans)</li>
+            <li>Any color shoes with socks must be worn</li>
+            <li>It is mandatory for students to wear shoes that adhere to school regulations; sandals
+                are strictly prohibited within the school
+                environment. Sandals may only be worn by
+                students who are genuinely unwell and present a
+                doctor's note or a letter from their parents</li>
+        </ul>
+        <li></li>
+        <li></li>
     </ol>
 </div>
 </body>
