--- a/Main web.html
+++ b/Main web.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">MySite</div>
-        <ul>
-            <li><a href="welcome.html">Home</a></li>
-            <li><a href="Main web.html">Regulations</a></li>
-            <li><a href="introduction.html">About</a></li>
-        </ul>
+    <div class="navbar-logo"><img src="https://tse3.mm.bing.net/th/id/OIP.YuS7CzAOSCPt17_43filYAAAAA?pid=Api&P=0" alt="elyon logo"></div>
+    <ul class="navbar-links">
+      <li><a href="welcome.html">Home</a></li>
+      <li><a href="Main web.html">Regulations</a></li>
+      <li><a href="introduction.html">About Us</a></li>
+    </ul>
     </nav>
+    <div class="list1">
     <div class="head">
     <h1>Students Regulations</h1>
     <h2>Pasal 3 - HAK DAN KEWAJIBAN SISWA</h2>
     </div>
     <h2>HAK SISWA - STUDENT RIGHTS</h2>
-    <div class="list1">
     <ol>
         <li>Participate in academic and non-academic activities conducted both inside
             and outside the school, including online and onsite formats.
@@ -57,6 +57,8 @@
             that all administrative obligations and the return of borrowed property have
             been completed.</li>
     <ol>
+    </div>
+    <div class="list2">
     <h2>KEWAJIBAN SISWA - STUDENT OBLIGATIONS</h2>
 
     <ol>
@@ -127,9 +129,36 @@
                 students who are genuinely unwell and present a
                 doctor's note or a letter from their parents</li>
         </ul>
-        <li></li>
-        <li></li>
+        <p></p>
+        <li>Follow grooming standards</li>
+        <p></p>
+        <p>Male Students:</p>
+        <p></p>
+        <ul>
+            <li>Short, neat haircut (front: eyebrow line,side: ear line, back: collarline)</li>
+            <li>No hair coloring</li>
+            <li>Appropriate accessories</li>
+            <li>No shaved designs or patterns</li>
+        </ul>
+        <p></p>
+        <p>Female Students:</p>
+        <ul>
+            <li>Neat hairstyle</li>
+            <li>No hair coloring</li>
+            <li>No makeup except for powder and colorlesslip gloss</li>
+            <li>Appropriate accessories</li>
+            <li>No nail polish</li>
+        </ul>
+        <p></p>
+        <li>Resolve problems according to applicable procedures.</li>
+        <li>Accept consequences and participate in guidance if a violation is committed.</li>
+        <li>according to the procedures and deadlinesset by the school.</li>
+        <li>Request permission before using school facilities outside ofschool hours or on
+holidays.</li>
+        <li>Use social media and online platforms responsibly and in alignment with
+learning purposes, avoiding hate speech, provocation, or contentrelated to
+ethnicity, religion, race, or intergroup conflict.</li>
     </ol>
-</div>
+    </div>
 </body>
 </html>
