--- a/introduction.html
+++ b/introduction.html
@@ -8,20 +8,24 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">MySite</div>
-        <ul>
-            <li><a href="welcome.html">Home</a></li>
-            <li><a href="Main web.html">Regulations</a></li>
-            <li><a href="introduction.html">About</a></li>
-        </ul>
-    </div>
-    <h1>This is our crew members !!!</h1>
-    <ul>
-        <li>James C (Head Chief)</li>
-        <li>Jose Antonio Ciang (mastermind ahh)</li>
-        <li>Brandon Cuaca(nerd)</li>
-        <li>Sean(carried)</li>
-        <li>Aldrich(carried)</li>
+    <div class="navbar-logo"><img src="https://tse3.mm.bing.net/th/id/OIP.YuS7CzAOSCPt17_43filYAAAAA?pid=Api&P=0" alt="elyon logo"></div>
+    <ul class="navbar-links">
+      <li><a href="introduction.html">Home</a></li>
+      <li><a href="Main web.html">Regulations</a></li>
+      <li><a href="welcome.html">About Us</a></li>
     </ul>
+    </nav>
+    <div class="intro">
+    <h1>This is our crew members !!!</h1>
+        <p>James C (Head Chief)</p>
+        <p>Jose Antonio Ciang (mastermind ahh)</p>
+        <p>Brandon Cuaca(nerd)</p>
+        <p>Sean(carried)</p>
+        <p>Aldrich(carried)</p>
+    </div>
+    <marquee behavior="scroll" direction="left" scrollamount="30">TEAMWORKKKK!!!!!!!!!</marquee>
+    <marquee behavior="scroll" direction="right" scrollamount="12">Idk why i added this (prob for fun)</marquee>
+    <marquee behavior="scroll" direction="left" scrollamount="20">aldrich definitely carried no cap</marquee>
+    <marquee behavior="scroll" direction="right" scrollamount="500">i bet u didnt see it</marquee>
 </body>
 </html>
