--- a/welcome.html
+++ b/welcome.html
@@ -11,7 +11,17 @@
     <h1>Welcome to the students regulation website!</h1>
     <p>This form is not a form of piracy (maybe)</p>
     <a href="Main web.html"><button>Click to be redirected to main page!</button></a>
-    <marquee behavior="" direction="left" height="300px">this web is created by someone from 8e but idk who it is so try to take a guess c:</marquee>
+    <marquee behavior="scroll" direction="right" scrollamount="500"> added this for fun btw</marquee>
+    <marquee behavior="scroll" direction="left" scrollamount="450"> added this for fun btw</marquee>
+    <marquee behavior="scroll" direction="right" scrollamount="600"> added this for fun btw</marquee>
+    <marquee behavior="scroll" direction="left" scrollamount="367"> added this for fun btw</marquee>
+    <marquee behavior="scroll" direction="right" scrollamount="670"> added this for fun btw</marquee>
+    <marquee behavior="scroll" direction="left" scrollamount="467"> added this for fun btw</marquee>
+    <marquee behavior="scroll" direction="right" scrollamount="499"> added this for fun btw</marquee>
+    <marquee behavior="scroll" direction="left" scrollamount="399"> added this for fun btw</marquee>
+    <marquee behavior="scroll" direction="right" scrollamount="358"> added this for fun btw</marquee>
+    <marquee behavior="scroll" direction="left" scrollamount="369"> added this for fun btw</marquee>
+    
     </div>
 </body>
 </html>
