--- a/Main web.html
+++ b/Main web.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Elyon Regulation for Students (Chapter 3)</title>
     <link rel="stylesheet" href="styling2.css">
 </head>
 <body>
@@ -160,5 +160,14 @@ learning purposes, avoiding hate speech, provocation, or contentrelated to
 ethnicity, religion, race, or intergroup conflict.</li>
     </ol>
     </div>
+    <video width="320" height="240" controls>
+        <source src="https://s51.aconvert.com/convert/p3r68-cdx67/9lsqq-mdtxr.mp4" type="video/mp4">
+    </video>
+    <marquee behavior="scroll" direction="right" scrollamount="50"> Have fun reading btw!</marquee>
+    <footer>
+        <div class="footer-logo"><img src="https://tse3.mm.bing.net/th/id/OIP.YuS7CzAOSCPt17_43filYAAAAA?pid=Api&P=0" alt="elyon logo"></div>
+        <p>&copy; Elyon Christian School</p>
+        <p>Email: jose.ciang.stu@elyon.sch.id</p>
+    </footer>
 </body>
 </html>
