--- a/introduction.html
+++ b/introduction.html
@@ -10,18 +10,25 @@
     <nav class="navbar">
     <div class="navbar-logo"><img src="https://tse3.mm.bing.net/th/id/OIP.YuS7CzAOSCPt17_43filYAAAAA?pid=Api&P=0" alt="elyon logo"></div>
     <ul class="navbar-links">
-      <li><a href="introduction.html">Home</a></li>
+      <li><a href="welcome.html">Home</a></li>
       <li><a href="Main web.html">Regulations</a></li>
-      <li><a href="welcome.html">About Us</a></li>
+      <li><a href="introduction.html">About Us</a></li>
     </ul>
     </nav>
     <div class="intro">
     <h1>This is our crew members !!!</h1>
-        <p>James C (Head Chief)</p>
-        <p>Jose Antonio Ciang (mastermind ahh)</p>
-        <p>Brandon Cuaca(nerd)</p>
-        <p>Sean(carried)</p>
-        <p>Aldrich(carried)</p>
+        <p>James C (idk)<a href="https://github.com/1Shotgmr"> Github username: 1Shotgmr</a></p>
+        <p>Jose Antonio Ciang (him)<a href="https://github.com/Jose-Ciang"> Github username: Jose-Ciang</a></p>
+        <p>Brandon Cuaca(idk)<a href="https://github.com/Brandonclashroyale"> Github username: Brandonclashroyale (this so tuff)</a></p>
+        <p>Sean(someone)<a href="https://github.com/cencennnnn"> Github username: cencennnnn</a></p>
+        <p>Aldrich(a person)<a href="https://github.com/Aldrochisinsane"> Github username: Aldrochisinsane (rlly?)</a></p>
+    </div>
+    <div class="faces">
+    <img src="c:\Users\Lenovo\Downloads\jose image kok gitu.jpeg" alt="">
+    <img src="c:\Users\Lenovo\Downloads\brandon loll.jpeg" alt="">
+    <img src="c:\Users\Lenovo\Downloads\aldrichhhhh.jpeg" alt="">
+    <img src="c:\Users\Lenovo\Downloads\meh.jpeg" alt="">
+    <img src="c:\Users\Lenovo\Downloads\SEANN.jpeg" alt="">
     </div>
     <marquee behavior="scroll" direction="left" scrollamount="30">TEAMWORKKKK!!!!!!!!!</marquee>
     <marquee behavior="scroll" direction="right" scrollamount="12">Idk why i added this (prob for fun)</marquee>
