--- a/introduction.html
+++ b/introduction.html
@@ -24,11 +24,11 @@
         <p>Aldrich(a person)<a href="https://github.com/Aldrochisinsane"> Github username: Aldrochisinsane (rlly?)</a></p>
     </div>
     <div class="faces">
-    <img src="c:\Users\Lenovo\Downloads\jose image kok gitu.jpeg" alt="">
-    <img src="c:\Users\Lenovo\Downloads\brandon loll.jpeg" alt="">
-    <img src="c:\Users\Lenovo\Downloads\aldrichhhhh.jpeg" alt="">
-    <img src="c:\Users\Lenovo\Downloads\meh.jpeg" alt="">
-    <img src="c:\Users\Lenovo\Downloads\SEANN.jpeg" alt="">
+    <img src="https://s11.aconvert.com/convert/p3r68-cdx67/r1e0r-8vgbh.jpg" alt="">
+    <img src="https://s11.aconvert.com/convert/p3r68-cdx67/99m73-ejppj.jpg" alt="">
+    <img src="https://s11.aconvert.com/convert/p3r68-cdx67/baib3-ldnqc.jpg" alt="">
+    <img src="https://s11.aconvert.com/convert/p3r68-cdx67/a1srf-ke4p5.jpg" alt="">
+    <img src="https://s11.aconvert.com/convert/p3r68-cdx67/uuy17-mtnee.jpg" alt="">
     </div>
     <marquee behavior="scroll" direction="left" scrollamount="30">TEAMWORKKKK!!!!!!!!!</marquee>
     <marquee behavior="scroll" direction="right" scrollamount="12">Idk why i added this (prob for fun)</marquee>
