--- a/introduction.html
+++ b/introduction.html
@@ -17,18 +17,38 @@
     </nav>
     <div class="intro">
     <h1>This is our crew members !!!</h1>
-        <p>James C (idk)<a href="https://github.com/1Shotgmr"> Github username: 1Shotgmr</a></p>
-        <p>Jose Antonio Ciang (him)<a href="https://github.com/Jose-Ciang"> Github username: Jose-Ciang</a></p>
-        <p>Brandon Cuaca(idk)<a href="https://github.com/Brandonclashroyale"> Github username: Brandonclashroyale (this so tuff)</a></p>
-        <p>Sean(someone)<a href="https://github.com/cencennnnn"> Github username: cencennnnn</a></p>
-        <p>Aldrich(a person)<a href="https://github.com/Aldrochisinsane"> Github username: Aldrochisinsane (rlly?)</a></p>
-    </div>
-    <div class="faces">
-    <img src="https://s11.aconvert.com/convert/p3r68-cdx67/r1e0r-8vgbh.jpg" alt="">
-    <img src="https://s11.aconvert.com/convert/p3r68-cdx67/99m73-ejppj.jpg" alt="">
-    <img src="https://s11.aconvert.com/convert/p3r68-cdx67/baib3-ldnqc.jpg" alt="">
-    <img src="https://s11.aconvert.com/convert/p3r68-cdx67/a1srf-ke4p5.jpg" alt="">
-    <img src="https://s11.aconvert.com/convert/p3r68-cdx67/uuy17-mtnee.jpg" alt="">
+        <table>
+    <tr>
+        <th>Name</th>
+        <th>Photo</th>
+        <th>Github Account</th>
+    </tr>
+    <tr>
+        <td>James C</td>
+        <td><img src="https://image2url.com/images/1762935136913-ed87f6f3-278d-4d0f-bc09-b168ead0ec8f.jpeg" alt=""></td>
+        <td><a href="https://github.com/1Shotgmr"> Github username: 1Shotgmr</a></td>
+    </tr>
+    <tr>
+        <td>Jose</td>
+        <td><img src="https://image2url.com/images/1762935262009-9a03846b-fef2-4cdc-932a-b365c6501655.jpeg" alt=""></td>
+        <td><a href="https://github.com/Jose-Ciang"> Github username: Jose-Ciang</a></td>
+    </tr>
+    <tr>
+        <td>Brandon</td>
+        <td><img src="https://image2url.com/images/1762935241940-d65c2fd3-6e6a-4940-a270-c33eb4e55325.jpeg" alt=""></td>
+        <td><a href="https://github.com/Brandonclashroyale"> Github username: Brandonclashroyale (this so tuff)</a></td>
+    </tr>
+    <tr>
+        <td>Sean</td>
+        <td><img src="https://image2url.com/images/1762935202415-51d71a26-6deb-47a0-8a4b-c64215436ed8.jpeg" alt=""></td>
+        <td><a href="https://github.com/cencennnnn"> Github username: cencennnnn</a></td>
+    </tr>
+    <tr>
+        <td>Aldrich</td>
+        <td><img src="https://image2url.com/images/1762935225812-1e97c3ef-64c2-45f2-8cc5-8571b0367826.jpeg" alt=""></td>
+        <td><a href="https://github.com/Aldrochisinsane"> Github username: Aldrochisinsane (rlly?)</a></td>
+    </tr>
+    </table>
     </div>
     <marquee behavior="scroll" direction="left" scrollamount="30">TEAMWORKKKK!!!!!!!!!</marquee>
     <marquee behavior="scroll" direction="right" scrollamount="12">Idk why i added this (prob for fun)</marquee>
